# StudentResultAnalyzer

./: .gitignore  .replit  CONTRIBUTING.md  GITHUB_DESCRIPTION.md  LICENSE  README.md  analytics.py  app.py  auth.py  create_zip.py  database.py  db.py  dependencies.txt  download_server.py  ml_models.py  pyproject.toml  replit.md  setup_instructions.md  utils.py  visualizations.py
