[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "pymongo>=4.13.2",
    "reportlab>=4.4.3",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.47.0",
]
